2003-10-20  Richard Williamson   <rjw@apple.com>

	Fixed 3456103.  Don't assert, just check for inappropriate state.
	Reviewed by Hyatt

	Add a debug menu item to always use ATSU text drawing.  This will be helpful
	to the ATSU folks in performance tuning there API.  Right now I see approx.
	2X slowdown using ATSU.

	Also did some shuffling around of inline related stuff.

      	Reviewed by Chris.

        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (isControlCharacter):
        (isAlternateSpace):
        (isSpace):
        (getUncachedWidth):
        (widthFromMap):
        (widthForGlyph):
        (+[WebTextRenderer _setAlwaysUseATSU:]):
        (glyphForCharacter):
        (glyphForUnicodeCharacter):
        (shouldUseATSU):
        * WebView.subproj/WebView.m:
        (+[WebView _setAlwaysUseATSU:]):
        (-[WebView _progressCompleted:]):
        * WebView.subproj/WebViewPrivate.h:

2003-10-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3442218>: crash due to infinite recursion trying to load standalone plug-in content

        Reviewed by darin.

        * WebView.subproj/WebFrame.m:
        (-[WebFrame stopLoading]): manage the isStoppingLoad ivar, return if isStoppingLoad is YES
        * WebView.subproj/WebFramePrivate.h: added the isStoppingLoad ivar

2003-10-19  Darin Adler  <darin@apple.com>

        Reviewed by Dave and Ken.

        - fixed 3457066 -- REGRESSION (91-92): command-left-arrow causes a scroll to the left before going back

        * WebView.subproj/WebFrameView.m: (-[WebFrameView keyDown:]): Add an else so that we don't fall into the
        scrolling code when the command key is down for right and left arrow.

2003-10-18  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3229530>: Dragging standalone image to desktop should save it, not re-download it

        Reviewed by darin.

	* English.lproj/Localizable.strings: